<resources>
    <string name="app_name">Movie Time</string>
    <string name="intro1">Discover your</string>
    <string name="intro2">Favorite movies</string>
    <string name="intro3">You can explore movies, mark watched ones, and choose your favorites.</string>
    <string name="get_started">Get Started</string>
    <string name="search_movie">Search movie...</string>
    <string name="best_movies">Best Movies</string>
    <string name="category">Category</string>
    <string name="uncoming_movies">Uncoming Movies</string>
    <string name="explorer">Explorer</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="search_results">Результати пошуку</string>
    <string name="back">Назад</string>
    <string name="results_for">Результати для \"%1$s\"</string>
    <string name="no_results_found">Результатів не знайдено</string>
    <string name="try_different_keywords">Спробуйте змінити ключові слова пошуку</string>
    <string name="something_went_wrong">Щось пішло не так</string>
    <string name="check_connection">Перевірте ваше підключення до інтернету і спробуйте знову</string>
    <string name="retry">Спробувати знову</string>
</resources>