<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".ui.intro.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/intro_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/intro_pic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/gradient"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:src="@drawable/gradient_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/intro_pic" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                >

                <TextView
                    android:id="@+id/intro1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro1"
                    android:textSize="27sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/intro2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro2"
                    android:textColor="@color/yellow"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/intro3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro3"
                    android:textColor="@color/grey"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/get_started_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Button"
                    android:layout_marginTop="12dp"
                    android:text="@string/get_started"
                    android:background="@drawable/yellow_button_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>